@@ -1,6 +1,7 @@
 
 0.3.2:
 SOL -   Fixed audio decoding thread - releases waiting audio threads
+SOL -	Fixed audio playback of MPEG videos when using external mixer
 
 0.3.1:
 SOL -   Fixed endlessly looping "mpegVidRsrc ParseMacroBlock" problem
